--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.2.19",
     "@types/react-dom": "^18.2.7",
     "classnames": "^2.3.2",
+    "formik": "^2.4.3",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "prettier": "^3.0.1",
